--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="University of Springfield, Computer science website"/>
+    <meta name="description" content="University of Springfield, Computer Science website"/>
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="" />
+    <link rel="manifest" href="" />
 
     <link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans:300,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
