--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="University of Springfield, Computer Science website"/>
+	<meta charset="utf-8"/>
+	<link href="" rel="icon"/>
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
+	<meta content="#000000" name="theme-color"/>
+	<meta content="University of Springfield, Computer Science website" name="description"/>
 
-    <link rel="apple-touch-icon" href="" />
-    <link rel="manifest" href="" />
+	<link href="" rel="apple-touch-icon"/>
+	<link href="" rel="manifest"/>
 
-    <link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans:300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="index.css" >
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" rel="stylesheet" type="text/css">
+	<link href="index.css" rel="stylesheet" type="text/css">
+	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
-    <title>University of Springfield</title>
+	<title>University of Springfield</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
